--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+        
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
         
         <title>Hello, world!</title>
     </head>
     <body class="h-100 w-100">
-        <nav class="navbar fixed-top m-4 p-0">
-            <button class="btn" href="#">Link</button>
-            <form class="form-inline m-0">
-                <div class="input-group mb-2 mr-sm-2">
+        <nav class="navbar navbar-light fixed-top m-4 p-0">
+            <form class="form-inline flex-fill m-0">
+                <div class="input-group">
                     <div class="input-group-prepend">
-                        <div class="input-group-text">Q</div>
+                        <button class="btn btn-light bg-light input-group-text" type="button"><i class="fas fa-sliders-h"></i></button>
+                        <div class="input-group-text bg-light border-right-0"><i class="fas fa-search"></i></div>
                     </div>
-                    <input type="text" class="form-control" id="search-places" placeholder="Search places">
+                    <input type="text" class="form-control border-left-0" id="search-places" placeholder="Search places">
                 </div>
             </form>
         </nav>
