Added auto-adding filters

--- a/index.html
+++ b/index.html
@@ -47,26 +47,7 @@
                 </form>
             </nav>
             
-            <div class="p-3 pr-6">
-                <div class="d-flex">
-                    <span class="mr-auto"><i class="fas fa-toolbox p-2 mr-2"></i>Administratif</span>
-                    <form class="form-inline">
-                        <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                            <input type="checkbox" class="custom-control-input" id="filter-administratif">
-                            <label class="custom-control-label" for="filter-administratif">&nbsp;</label>
-                        </div>
-                    </form>
-                </div>
-
-                <div class="d-flex">
-                    <span class="mr-auto"><i class="fas fa-basketball-ball p-2 mr-2"></i>Sports</span>
-                    <form class="form-inline">
-                        <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                            <input type="checkbox" class="custom-control-input" id="filter-sports">
-                            <label class="custom-control-label" for="filter-sports">&nbsp;</label>
-                        </div>
-                    </form>
-                </div>
+            <div id="filterList" class="p-3 pr-6 mt-2">
             </div>
         </nav>
     
