Add check or uncheck all filters

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
                 <form class="form-inline">
                     <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                        <input type="checkbox" class="custom-control-input" id="selectAllFilters">
+                        <input type="checkbox" class="custom-control-input" id="selectAllFilters" onchange="updateFilters(this)">
                         <label class="custom-control-label" for="selectAllFilters">&nbsp;</label>
                     </div>
                 </form>
