--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
         <link rel="stylesheet" href="leaflet.awesome-markers.css">
         <script src="leaflet.awesome-markers.js"></script>
         
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
+
+        <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
+
         <link rel="stylesheet" href="style.css">
-        <title>Hello, world!</title>
+        <title>MapINSA</title>
     </head>
     <body class="h-100 w-100">
         <nav class="navbar navbar-light fixed-top m-4 p-0">
