--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
     </head>
     <body class="h-100 w-100">
         <nav class="navbar navbar-light fixed-top m-4 p-0">
-            <form class="form-inline flex-fill m-0">
+            <form id="search-form" class="form-inline flex-fill m-0" action="">
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <button class="btn btn-light bg-white input-group-text" type="button" onclick="showFilters()"><i class="fas fa-sliders-h"></i></button>
                         <div class="input-group-text bg-white border-right-0"><i class="fas fa-search"></i></div>
                     </div>
-                    <input type="text" class="form-control border-left-0" id="search-places" placeholder="Chercher un endroit">
+                    <input type="text" class="form-control border-left-0" id="search-place" list="places" placeholder="Chercher un endroit">
+                    <datalist id="places">
+                    </datalist>
                 </div>
             </form>
         </nav>
